# ankamantatra-bot

./: Cargo.toml  README.md  data.json  database.db  docker-compose.yaml
app/: Cargo.toml
app/src/: main.rs
migrate/: Cargo.toml
migrate/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs
src/: gemini.rs  main.rs  migrate.rs  models.rs  serializers.rs  test.rs
